--- a/COMP213-webDesign/COMP213/Index For All Assignments/CSS files/as3style.css
+++ b/COMP213-webDesign/COMP213/Index For All Assignments/CSS files/as3style.css
@@ -1,12 +1,32 @@
 /*Div allignment*/
+.parent{
+    float:left;
+    align-content: center;
+}
+
+.banner{
+    margin-left:auto;
+    margin-right:auto;
+    margin-top:20px;
+}
+
+.banner img{
+    display: block;
+	margin: 0 auto;
+    height:100px;
+    width:500px;
+}
+
 .imagemap{
     float:left;
-    max-width: 33.33%;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     border: 3px solid #55d6aa;
     margin-top:20px;
+    margin-left:25%;
+    background: #d7fdf0;
+    margin-bottom:60px;
 }
 
 .imageContainer{
